AMP-627: - fixed app bar being covered issue - attempt to fix table row size by removing MuiIconButton padding, working if modified in browser but not with code

--- a/src/components/VariationsAppBar/VariationsAppBar.scss
+++ b/src/components/VariationsAppBar/VariationsAppBar.scss
@@ -1,7 +1,7 @@
 .variations-app-bar {
   background: #3F50B5;
   color: #fff;
-  max-height: 10;
+  max-height: 48;
 }
 .variations-app-bar-no-header {
   background: white;
