--- a/src/containers/VariationsMainView/VariationsMainView.scss
+++ b/src/containers/VariationsMainView/VariationsMainView.scss
@@ -21,3 +21,25 @@
     height: 1px;
   }
 }
+
+button[class="MuiIconButton-root-"] { padding: 0px 12px }
+tr[class="MuiTableRow-root-"] { height: 25px !important; }
+
+.MuiIconButton-root-41 {
+  padding: 0px 12px
+}
+
+.MuiTableRow-root-299 {
+  height: 25px !important
+}
+
+
+// .MuiTableCell-root {
+// height: 10px !important;
+// padding: 0px !important;
+// font-size: 0.7rem !important;
+// }
+
+// .MuiButtonBase-root{
+// height: 10px !important;
+// }
